# fastMBCUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt  setup_environment.sh  simuspclf1d_btPin_mfs_grasp.py  simuspclf1d_btPin_mfs_leaf_floor.py  simuspclf1d_mfs_coins.py
cmake/: FindTBB.cmake
core/: KTAB_Mfs_spclf1d.py  controller.py
core/mfs_torch_py/: __init__.py  ops.py
mfs_torch/: __init__.py  ops.py
mfs_torch/csrc/: CMakeLists.txt  mfs_torch_ops.cpp  mfs_torch_ops.cu
models/example-robot-data/robots/guesss_description/robots/: coinsPlanar_v1.urdf  grasp_v7x10.urdf  grasp_v7x10_bt.urdf  leaf_v1x10.urdf  leaf_v1x10_bt.urdf
models/utils/: makeModels.py
src/: CMakeLists.txt  cublas_wrapper.h  gputimer.h  kernels.h  kl_chol.cu  kl_chol.h  macro.h  maxmin.h  preprocess.h  traits.h  types.h
src/feiqi/: img2grid.h  io.cc
utils/: bt_utils.py  kinematics_torch.py  meshcat_polys_meshio.py  pin_utils.py  save_utils.py  torch_utils.py
